# ODOOXAU_hrms_rmbh_2026

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/v1/: attendance.py  auth.py  company_settings.py  dashboard.py  documents.py  employees.py  leave_balances.py  leave_requests.py  salary_structures.py
backend/app/core/: config.py  constants.py  deps.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  attendance.py  company.py  company_settings.py  document.py  employee.py  hr_officer.py  leave_balance.py  leave_request.py  salary_structure.py
backend/app/schemas/: attendance.py  auth.py  company.py  dashboard.py  document.py  employee.py  leave_balance.py  leave_request.py  salary_structure.py
backend/app/services/: attendance.py  auth.py  dashboard.py  leave.py  login_id.py  salary.py
backend/tests/: conftest.py  test_auth.py  test_employees.py  test_tenant_isolation.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  update_headers.cjs  update_headers.js  update_headers2.cjs
frontend/src/: App.tsx  index.css  styles.css
frontend/src/components/: DashboardLayout.tsx  ProtectedRoute.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx  ThemeProvider.tsx  Topbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ChangePassword.tsx  SignIn.tsx  SignUp.tsx
frontend/src/schemas/: index.ts
frontend/src/types/: api.ts  index.ts
(+31 files in other folders)
